--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="/home/masinha/github/gaurangisinha.github.io/assets/img/gaurangi.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Computer Science &amp; Engineering Undergraduate</h3>
