--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">Kelly</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">Gaurangi</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -53,7 +53,7 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="www.linkedin.com/in/gaurangisinha" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
 
     </div>
