--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="www.linkedin.com/in/gaurangisinha" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
 
     </div>
