--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-<<<<<<< HEAD
+
   <link href="assets/css/style.css" rel="stylesheet">
 =======
-  <link href="/home/masinha/github/gaurangisinha.github.io/assets/css/style.css" rel="stylesheet">
+  <!-- <link href="/home/masinha/github/gaurangisinha.github.io/assets/css/style.css" rel="stylesheet"> -->
   
->>>>>>> 1e7e517c4e209666e466c8ce5fb21d6e3534f0bf
+
 </head>
 
 <body>
