--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
   <!-- Template Main CSS File -->
 
-  <link href="assets/css/style.css" rel="stylesheet">
-=======
-  <!-- <link href="/home/masinha/github/gaurangisinha.github.io/assets/css/style.css" rel="stylesheet"> -->
+  <link href="/home/masinha/github/gaurangisinha.github.io/assets/css/style.css" rel="stylesheet">
   
 
 </head>
