--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/home/masinha/Documents/Gaurangi-CSE_important/Application/Portfolio/Kelly/assets/img/android-chrome-512x512.png" rel="icon">
-  <link href="/home/masinha/Documents/Gaurangi-CSE_important/Application/Portfolio/Kelly/assets/img/android-chrome-512x512.png" rel="apple-touch-icon">
+  <link href="assets/img/android-chrome-512x512.png" rel="icon">
+  <link href="assets/img/android-chrome-512x512.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/home/masinha/github/gaurangisinha.github.io/assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -71,7 +71,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="/home/masinha/github/gaurangisinha.github.io/assets/img/gaurangi.jpg" class="img-fluid" alt="">
+            <img src="assets/img/gaurangi.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Computer Science &amp; Engineering Undergraduate</h3>
