--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <!-- Template Main CSS File -->
 
-  <link href="assets/css/style.css" rel="stylesheet">
-  
+  <link href="assets/css/style.css" rel="stylesheet" />
+
 </head>
 
 <body>
