--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gaurangi</title>
+  <title>Gaurangi Sinha</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/home/masinha/Documents/Gaurangi-CSE_important/Application/Portfolio/Kelly/assets/img/android-chrome-512x512.png" rel="icon">
-  <link href="/home/masinha/Documents/Gaurangi-CSE_important/Application/Portfolio/Kelly/assets/img/android-chrome-512x512.png" rel="apple-touch-icon">
+  <link href="assets/img/android-chrome-512x512.png" rel="icon">
+  <link href="assets/img/android-chrome-512x512.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -46,7 +46,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <!-- <li><a href="services.html">Certificates</a></li> -->
-          <li><a href="portfolio.html">Fun side</a></li>
+          <li><a href="portfolio.html">Certificates</a></li>
           <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
