--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="www.linkedin.com/in/gaurangisinha" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/in/gaurangisinha" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://github.com/gaurangisinha" target="_blank" class="github"><i class="bi bi-github"></i></a>
       </div>
 
     </div>
