--- a/about.html
+++ b/about.html
@@ -52,7 +52,8 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/in/gaurangisinha" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://github.com/gaurangisinha" target="_blank" class="github"><i class="bi bi-github"></i></a>
       </div>
 
     </div>
