--- a/portfolio.html
+++ b/portfolio.html
@@ -148,12 +148,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/kgp_logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/coursera_logo.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Summer Internship</h4>
-                <p>IIT Kharagpur, Prof. Peyada</p>
+                <h4>Deep Learning Specialization</h4>
+                <p>Coursera</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/number-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/DL-And_Ng.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
                   <!-- <a href="https://drive.google.com/file/d/1G0eE78P8dW89-M5_ounVn1zFTAeeZRYB/view?usp=sharing" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -162,12 +162,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/kgp_logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/coursera_logo.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Summer Internship</h4>
-                <p>IIT Kharagpur, Prof. Peyada</p>
+                <h4>AI for everyone</h4>
+                <p>Coursera</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/number-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/AI.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
                   <!-- <a href="https://drive.google.com/file/d/1G0eE78P8dW89-M5_ounVn1zFTAeeZRYB/view?usp=sharing" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -176,12 +176,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/kgp_logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/nptel_logo_new.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Summer Internship</h4>
-                <p>IIT Kharagpur, Prof. Peyada</p>
+                <h4>German-I</h4>
+                <p>NPTEL</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/number-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/Final Certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
                   <!-- <a href="https://drive.google.com/file/d/1G0eE78P8dW89-M5_ounVn1zFTAeeZRYB/view?usp=sharing" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -190,12 +190,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/kgp_logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/jovian_logo.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Summer Internship</h4>
-                <p>IIT Kharagpur, Prof. Peyada</p>
+                <h4>Deep Learning with PyTorch: Zero to GANs</h4>
+                <p>Jovian.ai</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/number-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/certificate_jovian.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Certificate"><i class="bx bx-plus"></i></a>
                   <!-- <a href="https://drive.google.com/file/d/1G0eE78P8dW89-M5_ounVn1zFTAeeZRYB/view?usp=sharing" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
