--- a/resume.html
+++ b/resume.html
@@ -100,10 +100,10 @@
             <div class="resume-item">
               <h4>Combining Content Representation and Interaction based Approaches for Supervised Query Intent Similarity
                 Prediction</h4>
-              <h5>April 2023 - Ireland</h5>
-              <p><em>45th European Conference on Information Retrieval (ECIR 2023)</em></p>
+              <h5>Under review</h5>
+              <p><em>Under review at an A* conference</em></p>
               <ul>
-                <li>Conference paper accepted in ECIR 2023, the link will be updated once published.</li>
+                <li>The link will be updated once accepted</li>
                 <!-- <li>Link: <a href="https://doi.org/10.1007/978-3-030-96308-8_47" target="_blank">Springer Link</a>
                 </li>
                 <li>Link (camera-ready version): <a
